--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
         "build": "vite build"
     },
     "dependencies": {
-        "vue": "^3.0.4"
+        "@vitejs/plugin-vue": "^1.9.3",
+        "axios": "^0.23.0",
+        "v-mask": "^2.3.0",
+        "vue": "^3.2.20"
     },
     "devDependencies": {
-        "@tailwindcss/postcss7-compat": "^2.0.2",
-        "@vue/compiler-sfc": "^3.0.4",
-        "autoprefixer": "^9.8.8",
-        "postcss": "^7.0.39",
+        "@tailwindcss/postcss7-compat": "^2.2.17",
+        "@vue/compiler-sfc": "^3.2.20",
+        "autoprefixer": "^10.3.7",
+        "postcss": "^8.3.9",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
-        "vite": "^1.0.0-rc.13"
+        "vite": "^2.6.10"
     },
     "prettier": {
         "tabWidth": 4,
